[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
chrono = "0.4.38"
thiserror = "2.0.3"
regex = "1.11.1"
enumset = "1.1.5"
itertools = "0.13.0"
num = "0.4.3"
nalgebra = "0.33.2"
pathfinding = "4.12.0"